--- a/examples/demo-styles/container.scss
+++ b/examples/demo-styles/container.scss
@@ -1,4 +1,4 @@
-.demo-container {
+.code-container {
   .el-header,
   .el-footer {
     background-color: #b3c0d1;
@@ -11,7 +11,7 @@
   }
 }
 
-#chang-jian-ye-mian-bu-ju + .demo-container {
+.code-container {
   .el-header,
   .el-footer {
     text-align: center;
