--- a/examples/demo-styles/dropdown.scss
+++ b/examples/demo-styles/dropdown.scss
@@ -1,4 +1,4 @@
-.demo-block {
+.code-block {
   .el-dropdown {
     vertical-align: top;
 
@@ -29,7 +29,7 @@
   }
 }
 
-.demo-dropdown .demonstration {
+.code-dropdown .demonstration {
   display: block;
   color: #8492a6;
   font-size: 14px;
