--- a/examples/demo-styles/form.scss
+++ b/examples/demo-styles/form.scss
@@ -1,4 +1,4 @@
-.demo-form {
+.code-form {
   .el-select .el-input {
     width: 380px;
   }
@@ -40,10 +40,10 @@
       }
     }
   }
-  .demo-form-normal {
+  .code-form-normal {
     width: 460px;
   }
-  .demo-form-inline {
+  .code-form-inline {
     width: auto;
 
     .el-input {
@@ -53,14 +53,14 @@
       margin-right: 10px;
     }
   }
-  .demo-ruleForm {
+  .code-ruleForm {
     width: 460px;
 
     .el-select .el-input {
       width: 360px;
     }
   }
-  .demo-dynamic {
+  .code-dynamic {
     .el-input {
       margin-right: 10px;
       width: 270px;
