--- a/examples/demo-styles/rate.scss
+++ b/examples/demo-styles/rate.scss
@@ -1,4 +1,4 @@
-.demo-rate .block {
+.code-rate .block {
   padding: 30px 0;
   text-align: center;
   border-right: solid 1px #eff2f6;
@@ -10,7 +10,7 @@
   }
 }
 
-.demo-rate .demonstration {
+.code-rate .demonstration {
   display: block;
   color: #8492a6;
   font-size: 14px;
