--- a/examples/demo-styles/table.scss
+++ b/examples/demo-styles/table.scss
@@ -6,11 +6,11 @@
   background: #f0f9eb;
 }
 
-.demo-table .name-wrapper {
+.code-table .name-wrapper {
   display: inline-block;
 }
 
-.demo-table .demo-table-expand {
+.code-table .code-table-expand {
   label {
     width: 90px;
     color: #99a9bf;
