--- a/examples/demo-styles/alert.scss
+++ b/examples/demo-styles/alert.scss
@@ -1,7 +1,7 @@
-.demo-block.demo-alert .el-alert {
+.code-block.code-alert .el-alert {
   margin: 20px 0 0;
 }
 
-.demo-block.demo-alert .el-alert:first-child {
+.code-block.code-alert .el-alert:first-child {
   margin: 0;
 }
