--- a/examples/demo-styles/badge.scss
+++ b/examples/demo-styles/badge.scss
@@ -1,7 +1,7 @@
-.demo-badge.demo-block .el-dropdown {
+.code-badge.code-block .el-dropdown {
   vertical-align: middle;
 }
-.demo-badge.demo-block {
+.code-badge.code-block {
   .share-button {
     width: 36px;
     padding: 10px;
