--- a/examples/demo-styles/cascader.scss
+++ b/examples/demo-styles/cascader.scss
@@ -1,18 +1,18 @@
-.demo-cascader {
+.code-cascader {
   .el-cascader {
     width: 222px;
   }
 }
-.demo-cascader-size {
+.code-cascader-size {
   .el-cascader {
     vertical-align: top;
     margin-right: 15px;
   }
 }
-.demo-cascader .source > div {
+.code-cascader .source > div {
   display: flex;
 }
-.demo-cascader .block {
+.code-cascader .block {
   padding: 30px 0;
   text-align: center;
   border-right: solid 1px #eff2f6;
@@ -22,7 +22,7 @@
     border-right: none;
   }
 }
-.demo-cascader .demonstration {
+.code-cascader .demonstration {
   display: block;
   color: #8492a6;
   font-size: 14px;
