--- a/examples/demo-styles/color-picker.scss
+++ b/examples/demo-styles/color-picker.scss
@@ -1,4 +1,4 @@
-.demo-color-picker .block {
+.code-color-picker .block {
   padding: 30px 0;
   text-align: center;
   border-right: solid 1px #eff2f6;
@@ -9,12 +9,12 @@
     border-right: none;
   }
 }
-.demo-color-picker .demonstration {
+.code-color-picker .demonstration {
   display: block;
   color: #8492a6;
   font-size: 14px;
   margin-bottom: 20px;
 }
-.demo-color-picker .el-color-picker + .el-color-picker {
+.code-color-picker .el-color-picker + .el-color-picker {
   margin-left: 20px;
 }
