--- a/examples/demo-styles/datetime-picker.scss
+++ b/examples/demo-styles/datetime-picker.scss
@@ -1,9 +1,9 @@
-.demo-block.demo-datetime-picker .source > div {
+.code-block.code-datetime-picker .source > div {
   padding: 0;
   display: flex;
 }
 
-.demo-datetime-picker .block {
+.code-datetime-picker .block {
   padding: 30px 0;
   text-align: center;
   border-right: solid 1px #eff2f6;
@@ -13,7 +13,7 @@
   }
 }
 
-.demo-datetime-picker .demonstration {
+.code-datetime-picker .demonstration {
   display: block;
   color: #8492a6;
   font-size: 14px;
