--- a/examples/demo-styles/icon.scss
+++ b/examples/demo-styles/icon.scss
@@ -1,11 +1,11 @@
-.demo-icon .source > div > i {
+.code-icon .source > div > i {
   color: #606266;
   margin: 0 20px;
   font-size: 1.5em;
   vertical-align: middle;
 }
 
-.demo-icon .source button {
+.code-icon .source button {
   margin: 0 20px;
 }
 
