--- a/examples/demo-styles/input-number.scss
+++ b/examples/demo-styles/input-number.scss
@@ -1,4 +1,4 @@
-.demo-block.demo-input-number {
+.code-block.code-input-number {
   .el-input-number + .el-input-number {
     margin-left: 10px;
   }
