--- a/examples/demo-styles/pagination.scss
+++ b/examples/demo-styles/pagination.scss
@@ -1,8 +1,8 @@
-.demo-pagination .source.first {
+.code-pagination .source.first {
   padding: 0;
 }
 
-.demo-pagination .first .block {
+.code-pagination .first .block {
   padding: 30px 0;
   text-align: center;
   border-right: solid 1px #eff2f6;
@@ -15,18 +15,18 @@
   }
 }
 
-.demo-pagination .first .demonstration {
+.code-pagination .first .demonstration {
   display: block;
   color: #8492a6;
   font-size: 14px;
   margin-bottom: 20px;
 }
 
-.demo-pagination .source.last {
+.code-pagination .source.last {
   padding: 0;
 }
 
-.demo-pagination .last .block {
+.code-pagination .last .block {
   padding: 30px 24px;
   border-bottom: solid 1px #eff2f6;
   &:last-child {
@@ -34,13 +34,13 @@
   }
 }
 
-.demo-pagination .last .demonstration {
+.code-pagination .last .demonstration {
   font-size: 14px;
   color: #8492a6;
   line-height: 44px;
 }
 
-.demo-pagination .last .demonstration + .el-pagination {
+.code-pagination .last .demonstration + .el-pagination {
   width: 70%;
   margin: 5px 20px 0 0;
 }
