--- a/examples/demo-styles/slider.scss
+++ b/examples/demo-styles/slider.scss
@@ -1,8 +1,8 @@
-.demo-block.demo-slider .source {
+.code-block.code-slider .source {
   padding: 0;
 }
 
-.demo-block.demo-slider .block {
+.code-block.code-slider .block {
   padding: 30px 24px;
   overflow: hidden;
   border-bottom: solid 1px #eff2f6;
@@ -11,13 +11,13 @@
   }
 }
 
-.demo-block.demo-slider .demonstration {
+.code-block.code-slider .demonstration {
   font-size: 14px;
   color: #8492a6;
   line-height: 44px;
 }
 
-.demo-block.demo-slider .demonstration + .el-slider {
+.code-block.code-slider .demonstration + .el-slider {
   float: right;
   width: 70%;
   margin-right: 20px;
