--- a/examples/demo-styles/timeline.scss
+++ b/examples/demo-styles/timeline.scss
@@ -1,6 +1,6 @@
-.demo-timeline .source .radio {
+.code-timeline .source .radio {
   margin-bottom: 20px;
 }
-.demo-timeline .source .radio .el-radio-group {
+.code-timeline .source .radio .el-radio-group {
   margin-left: 20px;
 }
