--- a/examples/demo-styles/typography.scss
+++ b/examples/demo-styles/typography.scss
@@ -1,9 +1,9 @@
-.code-typo-size {
+.demo-typo-size {
   .color-dark-light {
     color: #99a9bf;
   }
 }
-.code-term-box img {
+.demo-term-box img {
   width: 24%;
   margin: 0 4% 20px 0;
 }
