--- a/examples/demo-styles/border.scss
+++ b/examples/demo-styles/border.scss
@@ -1,44 +1,44 @@
-.code-border .text {
+.demo-border .text {
   width: 15%;
 }
-.code-border .line {
+.demo-border .line {
   width: 70%;
 }
-.code-border .line div {
+.demo-border .line div {
   width: 100%;
   height: 0;
   border-top: 1px solid #eee;
 }
-.code-border .line .dashed {
+.demo-border .line .dashed {
   border-top: 2px dashed #eee;
 }
-.code-shadow {
+.demo-shadow {
   height: 100px;
   width: 50%;
   border: 1px solid #eee;
 }
-.code-shadow-text {
+.demo-shadow-text {
   line-height: 50px;
   color: #666;
   font-size: 14px;
 }
-.code-radius .title {
+.demo-radius .title {
   color: #666;
   font-size: 18px;
   margin: 10px 0;
 }
-.code-radius .value {
+.demo-radius .value {
   color: #333;
   font-size: 16px;
   margin: 10px 0;
 }
-.code-radius .radius {
+.demo-radius .radius {
   height: 60px;
   width: 70%;
   border: 1px solid #d7dae2;
   border-radius: 0;
   margin-top: 20px;
 }
-.code-radius .radius-30 {
+.demo-radius .radius-30 {
   border-radius: 30px;
 }
