--- a/examples/demo-styles/icon.scss
+++ b/examples/demo-styles/icon.scss
@@ -9,13 +9,14 @@
   margin: 0 20px;
 }
 
-.page-component .content > ul.icon-list {
+.element-doc > ul.icon-list {
   overflow: hidden;
   list-style: none;
   padding: 0!important;
   border: solid 1px #eaeefb;
   border-radius: 4px;
 }
+
 .icon-list li {
   float: left;
   width: 16.66%;
