Icon: 替换部分组件图标

--- a/src/style/date-picker/time-spinner.scss
+++ b/src/style/date-picker/time-spinner.scss
@@ -51,11 +51,11 @@
       color: $--color-primary;
     }
 
-    &.el-icon-arrow-up {
+    &.el-icon-up {
       top: 10px;
     }
 
-    &.el-icon-arrow-down {
+    &.el-icon-down {
       bottom: 10px;
     }
   }
