--- a/src/style/notification.scss
+++ b/src/style/notification.scss
@@ -65,19 +65,19 @@
     }
   }
 
-  .el-icon-success {
+  .el-icon-check-circle {
     color: $--notification-success-icon-color;
   }
 
-  .el-icon-error {
+  .el-icon-close-circle {
     color: $--notification-danger-icon-color;
   }
 
-  .el-icon-info {
+  .el-icon-info-circle {
     color: $--notification-info-icon-color;
   }
 
-  .el-icon-warning {
+  .el-icon-warning-circle {
     color: $--notification-warning-icon-color;
   }
 }
