--- a/src/style/upload.scss
+++ b/src/style/upload.scss
@@ -280,7 +280,7 @@
       display: inline-block;
 
       .el-icon-check,
-      .el-icon-circle-check {
+      .el-icon-check-circle {
         color: $--color-white;
       }
 
@@ -394,7 +394,7 @@
       height: 92px;
 
       .el-icon-check,
-      .el-icon-circle-check {
+      .el-icon-check-circle {
         color: $--color-white;
       }
 
