--- a/src/style/cascader.scss
+++ b/src/style/cascader.scss
@@ -29,7 +29,7 @@
       }
     }
 
-    .el-icon-arrow-down {
+    .el-icon-down {
       transition: transform .3s;
       font-size: 14px;
 
@@ -38,7 +38,7 @@
       }
     }
 
-    .el-icon-circle-close:hover {
+    .el-icon-close-circle:hover {
       color: $--input-clear-hover-color;
     }
 
