--- a/src/style/date-picker/date-range-picker.scss
+++ b/src/style/date-picker/date-range-picker.scss
@@ -25,11 +25,11 @@
     text-align: center;
     height: 28px;
 
-    [class*=arrow-left] {
+    [class*=left] {
       float: left;
     }
 
-    [class*=arrow-right] {
+    [class*=right] {
       float: right;
     }
 
@@ -77,7 +77,7 @@
     width: 100%;
     box-sizing: border-box;
 
-    > .el-icon-arrow-right {
+    > .el-icon-right {
       font-size: 20px;
       vertical-align: middle;
       display: table-cell;
