--- a/src/style/select-dropdown.scss
+++ b/src/style/select-dropdown.scss
@@ -25,7 +25,7 @@
         position: absolute;
         right: 20px;
         font-family: 'element-icons';
-        content: "\e6da";
+        content: "\E886";
         font-size: 12px;
         font-weight: bold;
         -webkit-font-smoothing: antialiased;
