--- a/src/style/checkbox.scss
+++ b/src/style/checkbox.scss
@@ -153,7 +153,7 @@
         border-color: $--checkbox-checked-input-border-color;
 
         &::after {
-          transform: rotate(45deg) scaleY(1);
+          transform: rotate(45deg) scale(1) translate(-50%, -50%);
         }
       }
 
@@ -177,10 +177,10 @@
           display: block;
           background-color: $--checkbox-checked-icon-color;
           height: 2px;
-          transform: scale(0.5);
-          left: 0;
+          transform: scale(1) translate(-50%, -50%);
+          left: 50%;
           right: 0;
-          top: 5px;
+          top: 50%;
         }
 
         &::after {
@@ -209,15 +209,15 @@
     &::after {
       box-sizing: content-box;
       content: "";
-      border: 1px solid $--checkbox-checked-icon-color;
+      border: 2px solid $--checkbox-checked-icon-color;
       border-left: 0;
       border-top: 0;
-      height: 7px;
-      left: 4px;
-      position: absolute;
-      top: 1px;
-      transform: rotate(45deg) scaleY(0);
       width: 3px;
+      height: 8px;
+      top: 50%;
+      left: 20%;
+      position: absolute;
+      transform: rotate(45deg) scale(0) translate(-50%, -50%);
       transition: transform .15s ease-in .05s;
       transform-origin: center;
     }
