--- a/src/style/checkbox.scss
+++ b/src/style/checkbox.scss
@@ -19,8 +19,9 @@
     border-radius: $--border-radius-base;
     border: $--border-base;
     box-sizing: border-box;
-    line-height: normal;
     height: $--checkbox-bordered-height;
+    line-height: $--checkbox-bordered-height;
+    vertical-align: middle;
 
     &.is-checked {
       border-color: $--color-primary;
@@ -36,9 +37,9 @@
     }
 
     &.el-checkbox--medium {
-      padding: $--checkbox-bordered-medium-padding;
       border-radius: $--button-medium-border-radius;
       height: $--checkbox-bordered-medium-height;
+      line-height: $--checkbox-bordered-medium-height;
 
       .el-checkbox__label {
         line-height: 17px;
@@ -52,9 +53,9 @@
     }
 
     &.el-checkbox--small {
-      padding: $--checkbox-bordered-small-padding;
       border-radius: $--button-small-border-radius;
       height: $--checkbox-bordered-small-height;
+      line-height: $--checkbox-bordered-small-height;
 
       .el-checkbox__label {
         line-height: 15px;
@@ -73,9 +74,9 @@
     }
 
     &.el-checkbox--mini {
-      padding: $--checkbox-bordered-mini-padding;
       border-radius: $--button-mini-border-radius;
       height: $--checkbox-bordered-mini-height;
+      line-height: $--checkbox-bordered-mini-height;
 
       .el-checkbox__label {
         line-height: 12px;
