--- a/src/style/common/var.scss
+++ b/src/style/common/var.scss
@@ -69,6 +69,8 @@ $--border-color-extra-light: #F2F6FC !default;
 /// color|1|Background Color|4
 $--background-color-base: #F5F7FA !default;
 
+
+
 /* Link
 -------------------------- */
 $--link-color: $--color-primary-light-2 !default;
@@ -125,9 +127,13 @@ $--font-line-height-primary: 24px !default;
 /// fontLineHeight|1|Line Height|2
 $--font-line-height-secondary: 16px !default;
 $--font-color-disabled-base: #bbb !default;
+
 /* Size
 -------------------------- */
-$--size-base: 14px !default;
+$--size-base: 40px !default;
+$--size-medium: 36px !default;
+$--size-small: 32px !default;
+$--size-mini: 28px !default;
 
 /* z-index
 -------------------------- */
@@ -180,19 +186,13 @@ $--checkbox-checked-icon-color: $--fill-base !default;
 
 $--checkbox-input-border-color-hover: $--color-primary !default;
 /// height||Other|4
-$--checkbox-bordered-height: 40px !default;
+$--checkbox-bordered-height: $--size-base !default;
 /// padding||Spacing|3
-$--checkbox-bordered-padding: 9px 20px 9px 10px !default;
-/// padding||Spacing|3
-$--checkbox-bordered-medium-padding: 7px 20px 7px 10px !default;
-/// padding||Spacing|3
-$--checkbox-bordered-small-padding: 5px 15px 5px 10px !default;
-/// padding||Spacing|3
-$--checkbox-bordered-mini-padding: 3px 15px 3px 10px !default;
+$--checkbox-bordered-padding: 0 10px !default;
 $--checkbox-bordered-medium-input-height: 14px !default;
 $--checkbox-bordered-medium-input-width: 14px !default;
 /// height||Other|4
-$--checkbox-bordered-medium-height: 36px !default;
+$--checkbox-bordered-medium-height: $--size-medium !default;
 $--checkbox-bordered-small-input-height: 12px !default;
 $--checkbox-bordered-small-input-width: 12px !default;
 /// height||Other|4
@@ -250,20 +250,18 @@ $--radio-checked-icon-color: $--color-primary !default;
 
 $--radio-input-border-color-hover: $--color-primary !default;
 
-$--radio-bordered-height: 40px !default;
-$--radio-bordered-padding: 12px 20px 0 10px !default;
-$--radio-bordered-medium-padding: 10px 20px 0 10px !default;
-$--radio-bordered-small-padding: 8px 15px 0 10px !default;
-$--radio-bordered-mini-padding: 6px 15px 0 10px !default;
+$--radio-bordered-padding: 0 10px !default;
+$--radio-bordered-height: $--size-base !default;
+$--radio-bordered-medium-height: $--size-medium !default;
+$--radio-bordered-small-height: $--size-small !default;
+$--radio-bordered-mini-height: $--size-mini !default;
+
 $--radio-bordered-medium-input-height: 14px !default;
 $--radio-bordered-medium-input-width: 14px !default;
-$--radio-bordered-medium-height: 36px !default;
 $--radio-bordered-small-input-height: 12px !default;
 $--radio-bordered-small-input-width: 12px !default;
-$--radio-bordered-small-height: 32px !default;
 $--radio-bordered-mini-input-height: 12px !default;
 $--radio-bordered-mini-input-width: 12px !default;
-$--radio-bordered-mini-height: 28px !default;
 
 /// fontSize||Font|1
 $--radio-button-font-size: $--font-size-base !default;
