--- a/src/style/radio.scss
+++ b/src/style/radio.scss
@@ -25,6 +25,8 @@
     border: $--border-base;
     box-sizing: border-box;
     height: $--radio-bordered-height;
+    line-height: $--radio-bordered-height;
+    vertical-align: middle;
 
     &.is-checked {
       border-color: $--color-primary;
@@ -42,12 +44,14 @@
 
   @include m(medium) {
     &.is-bordered {
-      padding: $--radio-bordered-medium-padding;
       border-radius: $--button-medium-border-radius;
       height: $--radio-bordered-medium-height;
+      line-height: $--radio-bordered-medium-height;
+
       .el-radio__label {
         font-size: $--button-medium-font-size;
       }
+
       .el-radio__inner {
         height: $--radio-bordered-medium-input-height;
         width: $--radio-bordered-medium-input-width;
@@ -58,11 +62,13 @@
       }
     }
   }
+
   @include m(small) {
     &.is-bordered {
-      padding: $--radio-bordered-small-padding;
       border-radius: $--button-small-border-radius;
       height: $--radio-bordered-small-height;
+      line-height: $--radio-bordered-small-height;
+
       .el-radio__label {
         font-size: $--button-small-font-size;
       }
@@ -77,11 +83,13 @@
       }
     }
   }
+
   @include m(mini) {
     &.is-bordered {
-      padding: $--radio-bordered-mini-padding;
       border-radius: $--button-mini-border-radius;
       height: $--radio-bordered-mini-height;
+      line-height: $--radio-bordered-mini-height;
+
       .el-radio__label {
         font-size: $--button-mini-font-size;
       }
