--- a/src/style/drawer.scss
+++ b/src/style/drawer.scss
@@ -119,6 +119,7 @@ $directions: rtl, ltr, ttb, btt;
   0 16px 24px 2px rgba(0, 0, 0, 0.14),
   0 6px 30px 5px rgba(0, 0, 0, 0.12);
   overflow: hidden;
+  transition: transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
 
   @each $direction in $directions {
     @include animation-out($direction);
