--- a/src/style/select.scss
+++ b/src/style/select.scss
@@ -127,16 +127,18 @@
     box-sizing: border-box;
     border-color: transparent;
     margin: 2px 0 2px 6px;
-    background-color: #f0f2f5;
+    color: $--color-text-regular !important;
+    background-color: $--background-color-base !important;
+    border-color: $--border-color-base !important;
 
     &__close.el-icon-close {
-      background-color: $--color-text-placeholder;
+      background-color: $--color-text-placeholder !important;
       right: -7px;
       top: 0;
-      color: $--color-white;
+      color: $--color-white !important;
 
       &:hover {
-        background-color: $--color-text-secondary;
+        background-color: $--color-text-secondary !important;
       }
 
       &::before {
