--- a/src/style/input.scss
+++ b/src/style/input.scss
@@ -38,7 +38,7 @@
   }
 
   & .el-input__count {
-    color: $--color-info;
+    color: $--color-text-secondary;
     background: $--color-white;
     position: absolute;
     font-size: 12px;
@@ -92,7 +92,7 @@
     height: 100%;
     display: inline-flex;
     align-items: center;
-    color: $--color-info;
+    color: $--color-text-secondary;
     font-size: 12px;
 
     .el-input__count-inner {
@@ -279,7 +279,7 @@
 
   @include e((append, prepend)) {
     background-color: $--background-color-base;
-    color: $--color-info;
+    color: $--color-text-secondary;
     vertical-align: middle;
     display: table-cell;
     position: relative;
