--- a/src/style/transfer.scss
+++ b/src/style/transfer.scss
@@ -218,10 +218,11 @@
     height: 14px;
     width: 14px;
     border-radius: 3px;
+
     &::after {
       height: 6px;
       width: 3px;
-      left: 4px;
+      left: 20%;
     }
   }
 }
