perf(menu): 优化菜单自定义颜色

--- a/src/style/common/var.scss
+++ b/src/style/common/var.scss
@@ -784,7 +784,7 @@ $--menu-item-font-size: $--font-size-base !default;
 $--menu-item-font-color: $--color-text-primary !default;
 /// color||Color|0
 $--menu-background-color: $--color-white !default;
-$--menu-item-hover-fill: $--color-primary-light-9 !default;
+$--menu-item-hover-fill: $--color-primary !default;
 
 /* Rate
 --------------------------*/
