--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -4,15 +4,17 @@
 @import "common/transition";
 
 @mixin menu-item {
-  height: 56px;
-  line-height: 56px;
+  height: 40px;
+  line-height: 40px;
   font-size: $--menu-item-font-size;
   color: $--menu-item-font-color;
   padding: 0 20px;
   list-style: none;
   cursor: pointer;
   position: relative;
-  transition: border-color .3s, background-color .3s, color .3s;
+  transition: border-color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
+    background-color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
+    color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
   box-sizing: border-box;
   white-space: nowrap;
 
@@ -21,18 +23,34 @@
   }
 
   i {
-    color: $--color-text-secondary;
+    color: inherit;
   }
 
-  &:hover,
-  &:focus {
+  &:hover:not(.is-disabled),
+  &:focus:not(.is-disabled) {
     outline: none;
-    background-color: $--menu-item-hover-fill;
+    color: $--menu-item-hover-fill;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-right-width: 3px;
+    border-right-style: solid;
+    border-right-color: inherit;
+    transform: scaleY(0.0001);
+    opacity: 0;
+    transition: transform 0.15s cubic-bezier(0.215, 0.61, 0.355, 1),
+      opacity 0.15s cubic-bezier(0.215, 0.61, 0.355, 1);
   }
 
   @include when(disabled) {
     opacity: 0.25;
     cursor: not-allowed;
+    outline: none;
     background: none !important;
   }
 }
@@ -51,10 +69,15 @@
 
   @include m(horizontal) {
     border-right: none;
+
+    .el-menu-item::after {
+      content: none;
+    }
+
     & > .el-menu-item {
       float: left;
-      height: 60px;
-      line-height: 60px;
+      height: 46px;
+      line-height: 46px;
       margin: 0;
       border-bottom: 2px solid transparent;
       color: $--color-text-secondary;
@@ -65,10 +88,11 @@
       }
 
       &:not(.is-disabled):hover,
-      &:not(.is-disabled):focus{
+      &:not(.is-disabled):focus {
         background-color: #fff;
       }
     }
+
     & > .el-submenu {
       float: left;
 
@@ -76,20 +100,20 @@
       &:hover {
         outline: none;
         .el-submenu__title {
-          color: $--color-text-primary;
+          color: $--color-primary;
+          border-bottom: 2px solid $--color-primary;
         }
       }
 
       &.is-active {
         .el-submenu__title {
           border-bottom: 2px solid $--color-primary;
-          color: $--color-text-primary;
         }
       }
 
       & .el-submenu__title {
-        height: 60px;
-        line-height: 60px;
+        height: 46px;
+        line-height: 46px;
         border-bottom: 2px solid transparent;
         color: $--color-text-secondary;
 
@@ -104,33 +128,42 @@
         margin-top: -3px;
       }
     }
+
     & .el-menu {
       & .el-menu-item,
       & .el-submenu__title {
-        background-color: $--color-white;
         float: none;
         height: 36px;
         line-height: 36px;
         padding: 0 10px;
-        color: $--color-text-secondary;
       }
-      & .el-menu-item.is-active,
-      & .el-submenu.is-active > .el-submenu__title {
-        color: $--color-text-primary;
-      }
+      // & .el-menu-item.is-active,
+      // & .el-submenu.is-active > .el-submenu__title {
+      //   color: $--color-text-primary;
+      // }
     }
+
     & .el-menu-item:not(.is-disabled):hover,
     & .el-menu-item:not(.is-disabled):focus {
       outline: none;
-      color: $--color-text-primary;
     }
-    & > .el-menu-item.is-active {
-      border-bottom: 2px solid $--color-primary;
-      color: $--color-text-primary;
+
+    & > .el-menu-item {
+      &.is-active,
+      &:not(.is-disabled):hover,
+      &:not(.is-disabled):focus {
+        border-bottom: 2px solid $--color-primary;
+        color: $--color-primary;
+        background-color: inherit;
+      }
     }
   }
   @include m(collapse) {
     width: 64px;
+
+    .el-menu-item::after {
+      content: none;
+    }
 
     > .el-menu-item,
     > .el-submenu > .el-submenu__title {
@@ -150,10 +183,6 @@
         visibility: hidden;
         display: inline-block;
       }
-    }
-
-    > .el-menu-item.is-active i {
-      color: inherit;
     }
 
     .el-menu .el-submenu {
@@ -195,8 +224,13 @@
       margin-left: 5px;
       margin-right: 5px;
     }
+
+    .el-menu-item::after {
+      content: none;
+    }
   }
 }
+
 @include b(menu-item) {
   @include menu-item;
 
@@ -207,14 +241,18 @@
     font-size: 18px;
     vertical-align: middle;
   }
+
   @include when(active) {
     color: $--color-primary;
-    i {
-      color: inherit;
+    background-color: $--color-primary-light-9;
+
+    &::after {
+      transform: scaleY(1);
+      opacity: 1;
     }
   }
 }
-  
+
 @include b(submenu) {
   list-style: none;
   margin: 0;
@@ -224,36 +262,43 @@
     @include menu-item;
 
     &:hover {
-      background-color: $--menu-item-hover-fill;
+      color: $--menu-item-hover-fill;
     }
   }
+
   & .el-menu {
     border: none;
   }
+
   & .el-menu-item {
-    height: 50px;
-    line-height: 50px;
+    height: 40px;
+    line-height: 40px;
     padding: 0 45px;
     min-width: 200px;
   }
+
   @include e(icon-arrow) {
     position: absolute;
     top: 50%;
     right: 20px;
     margin-top: -7px;
-    transition: transform .3s;
+    transition: transform 0.3s;
     font-size: 12px;
   }
+
   @include when(active) {
-    .el-submenu__title {
-      border-bottom-color: $--color-primary;
+    & > .el-submenu__title {
+      // border-bottom-color: $--color-primary;
+      color: $--color-primary;
     }
   }
+
   @include when(opened) {
     > .el-submenu__title .el-submenu__icon-arrow {
       transform: rotateZ(180deg);
     }
   }
+
   @include when(disabled) {
     .el-submenu__title,
     .el-menu-item {
@@ -262,6 +307,7 @@
       background: none !important;
     }
   }
+
   [class^="el-icon-"] {
     vertical-align: middle;
     margin-right: 5px;
@@ -284,6 +330,6 @@
 }
 
 .horizontal-collapse-transition .el-submenu__title .el-submenu__icon-arrow {
-  transition: .2s;
+  transition: 0.2s;
   opacity: 0;
 }
