--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -67,6 +67,12 @@
     border-bottom: solid 1px #e6e6e6;
   }
 
+  @include when(dark) {
+    .el-menu-item::after {
+      content: none;
+    }
+  }
+
   @include m(horizontal) {
     border-right: none;
 
