--- a/src/style/common/var.scss
+++ b/src/style/common/var.scss
@@ -50,13 +50,13 @@ $--color-danger-lighter: mix($--color-white, $--color-danger, 90%) !default;
 $--color-info-lighter: mix($--color-white, $--color-info, 90%) !default;
 
 /// color|1|Font Color|2
-$--color-text-primary: #303133 !default;
+$--color-text-primary: rgba(0,0,0,0.85) !default;
 /// color|1|Font Color|2
-$--color-text-regular: #606266 !default;
+$--color-text-regular: rgba(0,0,0,0.65) !default;
 /// color|1|Font Color|2
-$--color-text-secondary: #909399 !default;
+$--color-text-secondary:rgba(0,0,0,0.45) !default;
 /// color|1|Font Color|2
-$--color-text-placeholder: #C0C4CC !default;
+$--color-text-placeholder:rgba(0,0,0,0.25) !default;
 
 /// color|1|Border Color|3
 $--border-color-base: #DCDFE6 !default;
