fix: 修复图标头像会有底色的问题

--- a/src/style/avatar.scss
+++ b/src/style/avatar.scss
@@ -19,6 +19,10 @@
     vertical-align: middle;
   }
 
+  @include when(image) {
+    background: transparent;
+  }
+
   @include m(circle) {
     border-radius: 50%;
   }
