--- a/src/style/common/var.scss
+++ b/src/style/common/var.scss
@@ -375,6 +375,8 @@ $--message-close-size: 16px !default;
 $--message-close-hover-color: $--color-text-secondary !default;
 
 /// color||Color|0
+$--message-progress-font-color: $--color-primary !default;
+/// color||Color|0
 $--message-success-font-color: $--color-success !default;
 /// color||Color|0
 $--message-info-font-color: $--color-info !default;
