--- a/src/style/result.scss
+++ b/src/style/result.scss
@@ -34,6 +34,12 @@
     > i {
       font-size: 72px;
     }
+
+    @include when(image) {
+      width: 250px;
+      height: 295px;
+      margin: auto;
+    }
   }
 
   @include e(title) {
