--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -2,6 +2,7 @@
 @import "checkbox";
 @import "tag";
 @import "tooltip";
+@import "empty";
 @import "common/var";
 
 @include b(table) {
@@ -17,13 +18,20 @@
 
   // 数据为空
   @include e(empty-block) {
-    min-height: 60px;
+    min-height: 137px;
     text-align: center;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @include when(absolute) {
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
   }
 
   @include e(empty-text) {
@@ -67,7 +75,7 @@
     background-color: $--color-white;
 
     // 纯属为了增加权重
-    &[class*=cell] {
+    &[class*="cell"] {
       padding: 20px 50px;
     }
 
@@ -90,7 +98,8 @@
     border-right: 0;
     border-bottom: 0;
 
-    th.gutter, td.gutter {
+    th.gutter,
+    td.gutter {
       border-right-width: 1px;
     }
   }
@@ -118,7 +127,8 @@
     }
   }
 
-  th, td {
+  th,
+  td {
     padding: 12px 0;
     min-width: 0;
     box-sizing: border-box;
@@ -150,21 +160,24 @@
   }
 
   @include m(medium) {
-    th, td {
+    th,
+    td {
       padding: 10px 0;
     }
   }
 
   @include m(small) {
     font-size: 12px;
-    th, td {
+    th,
+    td {
       padding: 8px 0;
     }
   }
 
   @include m(mini) {
     font-size: 12px;
-    th, td {
+    th,
+    td {
       padding: 6px 0;
     }
   }
@@ -177,7 +190,8 @@
     }
   }
 
-  th.is-leaf, td {
+  th.is-leaf,
+  td {
     border-bottom: $--table-border;
   }
 
@@ -259,7 +273,7 @@
     border: $--table-border;
 
     @include share-rule(border-pseudo) {
-      content: '';
+      content: "";
       position: absolute;
       background-color: $--table-border-color;
       z-index: 1;
@@ -293,7 +307,8 @@
       border-color: transparent;
     }
 
-    th, td {
+    th,
+    td {
       border-right: $--table-border;
 
       &:first-child .cell {
@@ -324,7 +339,7 @@
     box-shadow: $--table-fixed-box-shadow;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       bottom: 0;
@@ -495,7 +510,7 @@
     & .el-table__body {
       & tr.el-table__row--striped {
         td {
-          background: #FAFAFA;
+          background: #fafafa;
         }
 
         &.current-row td {
@@ -507,8 +522,10 @@
 
   @include e(body) {
     tr.hover-row {
-      &, &.el-table__row--striped {
-        &, &.current-row {
+      &,
+      &.el-table__row--striped {
+        &,
+        &.current-row {
           > td {
             background-color: $--table-row-hover-background-color;
           }
@@ -539,13 +556,13 @@
     & i {
       color: $--color-info;
       font-size: 12px;
-      transform: scale(.75);
+      transform: scale(0.75);
     }
   }
 
   @include m(enable-row-transition) {
     .el-table__body td {
-      transition: background-color .25s ease;
+      transition: background-color 0.25s ease;
     }
   }
 
@@ -563,7 +580,7 @@
     }
   }
 
-  [class*=el-table__row--level] {
+  [class*="el-table__row--level"] {
     .el-table__expand-icon {
       display: inline-block;
       width: 20px;
