fix(form): 修复不同模式是否显示冒号的问题

--- a/examples/demo-styles/form.scss
+++ b/examples/demo-styles/form.scss
@@ -40,10 +40,10 @@
       }
     }
   }
-  .code-form-normal {
+  .demo-form-normal {
     width: 460px;
   }
-  .code-form-inline {
+  .demo-form-inline {
     width: auto;
 
     .el-input {
@@ -53,14 +53,14 @@
       margin-right: 10px;
     }
   }
-  .code-ruleForm {
+  .demo-ruleForm {
     width: 460px;
 
     .el-select .el-input {
       width: 360px;
     }
   }
-  .code-dynamic {
+  .demo-dynamic {
     .el-input {
       margin-right: 10px;
       width: 270px;
