--- a/src/style/icon.scss
+++ b/src/style/icon.scss
@@ -14,6 +14,7 @@
   font-family: 'element-icons' !important;
   speak: none;
   font-style: normal;
+  font-display: $--font-display;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
